# ChangeLog for www-client/mozilla-firefox
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-client/mozilla-firefox/ChangeLog,v 1.405 2008/05/17 17:12:05 armin76 Exp $

  17 May 2008; Raúl Porcel <armin76@gentoo.org>
  mozilla-firefox-3.0_rc1.ebuild:
  Raise nspr/nss dep

*mozilla-firefox-3.0_rc1 (17 May 2008)

  17 May 2008; Raúl Porcel <armin76@gentoo.org>
  +mozilla-firefox-3.0_rc1.ebuild:
  Version bump

  15 May 2008; Raúl Porcel <armin76@gentoo.org>
  mozilla-firefox-2.0.0.11.ebuild, mozilla-firefox-2.0.0.14.ebuild,
  mozilla-firefox-3.0_beta5-r4.ebuild:
  Fix HOMEPAGE, thanks to welpie

  15 May 2008; Raúl Porcel <armin76@gentoo.org>
  mozilla-firefox-3.0_beta5-r4.ebuild:
  Minor fixes

*mozilla-firefox-3.0_beta5-r4 (15 May 2008)

  15 May 2008; Raúl Porcel <armin76@gentoo.org>
  -mozilla-firefox-3.0_beta5-r3.ebuild,
  +mozilla-firefox-3.0_beta5-r4.ebuild:
  Restore old wrapper behaviour

*mozilla-firefox-3.0_beta5-r3 (14 May 2008)

  14 May 2008; Raúl Porcel <armin76@gentoo.org>
  -mozilla-firefox-2.0.0.12.ebuild, -mozilla-firefox-2.0.0.13.ebuild,
  -mozilla-firefox-3.0_beta5-r2.ebuild,
  +mozilla-firefox-3.0_beta5-r3.ebuild:
  Fix bug #221957, remove old

*mozilla-firefox-3.0_beta5-r2 (28 Apr 2008)

  28 Apr 2008; Raúl Porcel <armin76@gentoo.org>
  -mozilla-firefox-3.0_beta5-r1.ebuild,
  +mozilla-firefox-3.0_beta5-r2.ebuild:
  Fix wrapper

  26 Apr 2008; Raúl Porcel <armin76@gentoo.org>
  mozilla-firefox-2.0.0.14.ebuild:
  Don't strip extension, bug #216062

  24 Apr 2008; Raúl Porcel <armin76@gentoo.org>
  mozilla-firefox-2.0.0.14.ebuild:
  Bump patchset to fix bug #218977

  22 Apr 2008; Tobias Scherbaum <dertobi123@gentoo.org>
  mozilla-firefox-2.0.0.14.ebuild:
  ppc stable, bug #218065

  19 Apr 2008; Raúl Porcel <armin76@gentoo.org>
  mozilla-firefox-2.0.0.14.ebuild, mozilla-firefox-3.0_beta5-r1.ebuild:
  Fix pango check, bug #218438

  19 Apr 2008; Markus Rothe <corsair@gentoo.org>