@@ -1,6 +1,10 @@
 # ChangeLog for www-client/mozilla-firefox
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-client/mozilla-firefox/ChangeLog,v 1.405 2008/05/17 17:12:05 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-client/mozilla-firefox/ChangeLog,v 1.406 2008/05/20 16:43:43 armin76 Exp $
+
+  20 May 2008; Raúl Porcel <armin76@gentoo.org>
+  mozilla-firefox-3.0_beta5-r4.ebuild, mozilla-firefox-3.0_rc1.ebuild:
+  Fix sqlite dep
 
   17 May 2008; Raúl Porcel <armin76@gentoo.org>
   mozilla-firefox-3.0_rc1.ebuild:
